--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-avro-io",
-  "description": "This will allow you to encode / decode avro binary format to / from json format, it supports both deflate and snappy compressions and supports node streams",
+  "description": "This will allow you to encode / decode avro binary format to / from json format, it supports deflate and node streams but NOT snappy compressions",
   "version": "0.3.3",
   "author": {
     "name": "James Power",
@@ -9,7 +9,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jamesbrucepower/node-avro-io.git"
+    "url": "https://github.com/adrian-sgn/node-avro-io.git"
   },
   "main": "./index",
   "scripts": {
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "lodash": "^2.4.1",
-    "snappy": "^4.0.1",
     "buffer-crc32": "^0.2.5",
     "int64-native": "^0.4.0"
   },
