--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "lodash": "^2.4.1",
     "buffer-crc32": "^0.2.5",
-    "int64-native": "^0.4.0"
+    "int64-native": ">=0.4.0"
   },
   "devDependencies": {
     "mocha": "^2.1.0",
